@@ -37,10 +37,17 @@ def status():
     return debrid_resolvers != []
 
 
-def resolver(url, debrid):
+def resolver(url, debrid, from_pack=None):
     try:
         debrid_resolver = [resolver for resolver in debrid_resolvers if resolver.name == debrid][0]
         debrid_resolver.login()
+        if from_pack:
+            season, episode = from_pack.split('_')
+            _host, _media_id = debrid_resolver.get_host_and_id(url)
+            url_list = debrid_resolver.get_media_url(_host, _media_id, return_all=True)
+            #from resources.lib.modules import log_utils
+            #log_utils.log('url_list: ' + repr(url_list))
+            url = [s['link'] for s in url_list if matchEpisode(s['name'], season, episode)][0]
         _host, _media_id = debrid_resolver.get_host_and_id(url)
         stream_url = debrid_resolver.get_media_url(_host, _media_id)
         return stream_url
@@ -48,3 +55,15 @@ def resolver(url, debrid):
         from resources.lib.modules import log_utils
         log_utils.log('%s Resolve Failure' % debrid, 1)
         return None
+
+
+def matchEpisode(filename, season, episode):
+    import re
+    filename = re.sub('[^A-Za-z0-9 ]+', ' ', filename.split('/')[-1]).lower() + ' '
+    r = r"(?:[a-z\s*]|^)(?:%s|%s)\s*(?:e|x|episode)\s*(?:%s|%s)\s+" % (season.zfill(2), season, episode.zfill(2), episode)
+    m = re.search(r, filename, flags=re.S)
+
+    if m:
+        return True
+
+
