@@ -877,7 +877,7 @@ class sources:
                 i.update({'q_filter': 3})
 
             if size_filters == 'true':
-                if 'size' in i and not i['size'] in [0.0, 0, None]:
+                if 'size' in i and not i['size'] in [0.0, 0, None] and not 'pack' in i:
                     gb_per_hour = (i['size'] * 3600) / int(duration)
                 else:
                     gb_per_hour = min_size_gb + 0.25
@@ -934,6 +934,9 @@ class sources:
 
         autoplay_on = control.setting('hosts.mode') == '2'
 
+        torrent_resolvers = ['Real-Debrid', 'AllDebrid', 'Premiumize.me', 'Debrid-Link.fr', 'Linksnappy']
+        torrent_pack_resolvers = cache_check_resolvers = ['Real-Debrid', 'AllDebrid', 'Premiumize.me', 'Debrid-Link.fr']
+
         random.shuffle(self.sources)
 
         local = [i for i in self.sources if 'local' in i and i['local'] == True]
@@ -959,13 +962,13 @@ class sources:
             valid_hoster = set([i['source'] for i in self.sources])
             valid_hoster = [i for i in valid_hoster if d.valid_url('', i)]
 
-            for i in self.sources:
-                if 'magnet:' in i['url'] and d.name in ['Real-Debrid', 'AllDebrid', 'Premiumize.me', 'Debrid-Link.fr', 'Linksnappy']:
-                    i.update({'debrid': d.name})
-
-            torrentSources = [i for i in self.sources if 'magnet:' in i['url']]
+            torrentSources = [i for i in self.sources if 'magnet:' in i['url']
+                              and d.name in torrent_resolvers
+                              and not (i.get('pack') and d.name not in torrent_pack_resolvers)]
             if torrentSources:
-                if check_torr_cache == 'true' and d.name in ['Real-Debrid', 'AllDebrid', 'Premiumize.me', 'Debrid-Link.fr']:
+                for i in torrentSources:
+                    i.update({'debrid': d.name})
+                if check_torr_cache == 'true' and d.name in cache_check_resolvers:
                     checkedTorrentSources = self.sourcesProcessTorrents(torrentSources)
                     cached = [dict(i.items()) for i in checkedTorrentSources if i['source'] == 'cached torrent']
                     filter += cached
@@ -973,7 +976,7 @@ class sources:
                     if (remove_uncached == 'false' or len(cached) == 0 or unfiltered) and not autoplay_on:
                         filter += [dict(i.items()) for i in checkedTorrentSources if i['source'] == '[COLOR dimgrey]uncached torrent[/COLOR]']
                 else:
-                    filter += [dict(i.items()) for i in self.sources if 'magnet:' in i['url']]
+                    filter += [dict(i.items()) for i in torrentSources]
             filter += [dict(list(i.items()) + [('debrid', d.name)]) for i in self.sources if i['source'] in valid_hoster and 'magnet:' not in i['url']]
 
         filter += [i for i in self.sources if not i['source'].lower() in self.hostprDict and i['debridonly'] == False]
@@ -996,7 +999,6 @@ class sources:
 
         self.sources = local + [i for i in self.sources if i.get('official')] + [i for i in self.sources if not i.get('official')]
 
-        self.sources = self.sources[:4000]
 
         official_color = control.setting('official.identify') or '15'
         official_identify = self.getPremColor(official_color)
@@ -1025,8 +1027,8 @@ class sources:
             q = self.sources[i]['quality'].upper()
 
             s = self.sources[i]['source'].upper().replace('DIMGREY]', 'dimgrey]')
-
-            #s = s.rsplit('.', 1)[0]
+            if self.sources[i].get('pack'):
+                s = s.replace('TORRENT', 'TORRENT (PACK)')
 
             l = self.sources[i]['language'].upper()
 
@@ -1036,7 +1038,6 @@ class sources:
                 f = ' / '.join(['%s' % info.strip() for info in self.sources[i].get('info', '').split('|')])
                 if name_setting:
                     if 'name' in self.sources[i] and not self.sources[i]['name'] == '':
-                        #_name = cleantitle.get_title(self.sources[i]['name'], sep='.')
                         _name = self.sources[i]['name']
                         size_info = self.sources[i].get('info', '').split(' |')[0]
                         if size_info.rstrip().lower().endswith('gb'):
@@ -1120,6 +1121,7 @@ class sources:
             d = item['debrid']
             direct = item['direct']
             local = item.get('local', False)
+            pack = item.get('pack')
 
             provider = item['provider']
             call = [i[1] for i in self.sourceDict if i[0] == provider][0]
@@ -1134,7 +1136,7 @@ class sources:
                 for part in url.split(' , '):
                     u = part
                     if not d in ['', 'un', 'furk']:
-                        part = debrid.resolver(part, d)
+                        part = debrid.resolver(part, d, from_pack=pack)
 
                     elif not direct == True:
                         hmf = resolveurl.HostedMediaFile(url=u, include_disabled=True, include_universal=False)
