@@ -1,3 +1,7 @@
+[B][COLOR gold]v4.11.00[/COLOR][/B]
+- Added basic torrent packs support
+  (ResolveURL now supports multi-file torrent resolving via RD, AD, PM, DL)
+
 [B][COLOR gold]v4.10.10[/COLOR][/B]
 - Scrape title tweaks
 - Library scraper fixes
